--- a/foto.htm
+++ b/foto.htm
@@ -15,8 +15,8 @@
     <link rel="stylesheet" type="text/css" href="vendor/slick/slick-theme.css" />
     <!-- 燈箱facybox -->
     <link rel="stylesheet" type="text/css" href="vendor/facybox/dist/jquery.fancybox.min.css">
-    <!-- hyUI css -->
-    <link rel="stylesheet" href="css/hyui.css">
+    <!-- CSS -->
+    <link rel="stylesheet" href="css/boca.css">
     <!-- favicon -->
     <link href="images/favicon.png" rel="icon" type="image/x-icon">
 </head>
@@ -113,14 +113,29 @@
                     </div>
                     <div class="white_zone">
                         <h2 class="title">照片上傳</h2>
-                        <!-- <h3 class="subtitle"><span>請再次確認輸入資料</span></h3> -->
+                        <h3 class="subtitle"><span>您上傳的照片通過初步檢核，請再次確認照片</span></h3>
                         <h3 class="subtitle warn"><span>您上傳的照片未能通過檢核</span></h3>
                         <!-- Start -->
                         <section class="">
+                            <!-- 照片上傳 - 通過 -->
+                            <div class="foto-upload">
+                                <div class="foto">
+                                    <img src="images/foto-pass.svg" alt="">
+                                </div>
+                                <div class="info">
+                                    <ol>
+                                        <li>此僅就照片格式初審通過，實際情況仍以送件當日受理單位審核意見為準。</li>
+                                        <li>犯法冒用身分提出護照申請、冒名使用他人護照、將護照交付他人或謊報遺失以供他人冒名使用等，可處五年至7年以下有期徒刑，得併科新臺幣五十萬元至七十萬元以下罰金，切勿以身試法。</li>
+                                    </ol>
+                                    <div class="check_grp">
+                                        <label><input name="checkSample" type="checkbox" value="">本人已詳閱瞭解並同意遵守相關規範。</label>
+                                    </div>
+                                </div>
+                            </div>
                             <!-- 照片上傳 - 錯誤 -->
                             <div class="foto-upload warn">
                                 <div class="foto">
-                                    <img src="images/img-error.png" alt="">
+                                    <img src="images/foto-error.png" alt="">
                                 </div>
                                 <div class="info">
                                     <ol>
@@ -133,8 +148,8 @@
                             </div>
                             <!-- 按鈕 -->
                             <div class="btn_grp">
-                                <button class="btn btn-reset">清除</button>
-                                <button class="btn btn-submit">查詢</button>
+                                <button class="btn btn-reset">重新上傳</button>
+                                <button class="btn btn-submit">確認</button>
                             </div>
                         </section>
                         <!-- End -->
