--- a/index.htm
+++ b/index.htm
@@ -10,8 +10,8 @@
     <script src="js/html5shiv.js"></script>
     <script src="js/respond.min.js"></script>
     <![endif]-->
-    <!-- hyUI -->
-    <link rel="stylesheet" href="css/hyui.css">
+    <!-- CSS -->
+    <link rel="stylesheet" href="css/boca.css">
     <style>
         .demo_wrap {
             max-width: 1000px;
@@ -92,9 +92,13 @@
                 <tbody>
                     <tr>
                         <td></td>
-                        <td>登入頁</td>
-                        <!-- 連結放到a裡面就好 -->
+                        <td>登入頁 - 旅行社</td>
                         <td><a href="login.htm" target="_blank"></a></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>登入頁 - 個人</td>
+                        <td><a href="p_login.htm" target="_blank"></a></td>
                     </tr>
                     <tr>
                         <td></td>
@@ -150,8 +154,8 @@
                     </tr>
                     <tr>
                         <td></td>
-                        <td>檢核失敗</td>
-                        <td><a href="foto-error.htm" target="_blank"></a></td>
+                        <td>檢核成功、失敗</td>
+                        <td><a href="foto.htm" target="_blank"></a></td>
                     </tr>
                     <tr>
                         <td></td>
@@ -183,7 +187,7 @@
                     <tr>
                         <td></td>
                         <td>申辦流程</td>
-                        <td><a href="p_process.html"></a></td>
+                        <td><a href="p_process.html" target="_blank"></a></td>
                     </tr>
                     <tr>
                         <td></td>
@@ -193,12 +197,7 @@
                     <tr>
                         <td></td>
                         <td>申辦方式</td>
-                        <td><a href="..."></a></td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td>申辦方式</td>
-                        <td><a href="..."></a></td>
+                        <td><a href="p_sp4.html" target="_blank"></a></td>
                     </tr>
                     <tr>
                         <td></td>
@@ -212,23 +211,18 @@
                     </tr>
                     <tr>
                         <td></td>
-                        <td>進階檢核 - 失敗</td>
-                        <td>內容同 foto-error.htm</td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td>進階檢核 - 成過</td>
-                        <td><a href="..."></a></td>
+                        <td>進階檢核 - 成功、失敗</td>
+                        <td>內容同 foto.htm</td>
                     </tr>
                     <tr>
                         <td></td>
                         <td>預約成功通知</td>
-                        <td><a href="..."></a></td>
+                        <td><a href="p_sp2.html" target="_blank"></a></td>
                     </tr>
                     <tr>
                         <td></td>
                         <td>變更辦理方式</td>
-                        <td><a href="..."></a></td>
+                        <td><a href="p_sp3.html" target="_blank"></a></td>
                     </tr>
                     <!-- <tr>
                         <td></td>
