--- a/p_login.htm
+++ b/p_login.htm
@@ -13,46 +13,13 @@
     <!-- slick css-->
     <link rel="stylesheet" type="text/css" href="vendor/slick/slick.css" />
     <link rel="stylesheet" type="text/css" href="vendor/slick/slick-theme.css" />
-    <!-- 燈箱facybox -->
-    <link rel="stylesheet" type="text/css" href="vendor/facybox/dist/jquery.fancybox.min.css">
     <!-- CSS -->
-    <link rel="stylesheet" href="css/boca.css">
+    <link rel="stylesheet" href="css/boca_personal.css">
     <!-- favicon -->
     <link href="images/favicon.png" rel="icon" type="image/x-icon">
 </head>
 
-<body class="Page">
-    <!-- 視窗 -->
-    <div id="modal1" class="modal">
-        <h2>標題</h2>
-        <div class="modal_content">
-            <p>Lorem, ipsum dolor sit amet <a href="#">超連結</a><b>一般粗體</b><b class="R">紅字</b><b class="B">藍字</b>consectetur elit. Blanditiis optio quasi consequatur repellendus, qui nisi itaque. Libero, fugit atque ea praesentium quo quidem itaque magnam eius, repudiandae? Vero, voluptate.</p>
-            <ol>
-                <li>有序清單</li>
-                <li>項目1</li>
-                <li>項目2</li>
-            </ol>
-            <ul>
-                <li>無序清單</li>
-                <li>項目1</li>
-                <li>項目2</li>
-            </ul>
-
-            <section class="center_box">
-                <p>送件地點</p>
-                <b>外交部領事事務局</b>
-                <p>預約日期/時段</p>
-                <b>10/15(五) 10:00~10:30</b>
-            </section>
-            <div class="btn_grp">
-                <button class="btn btn-reset">清除</button>
-                <button class="btn btn-submit">送出</button>
-                <!-- <button type="button" class="btn btn-primary">主要按鈕</button>
-                <button type="button" class="btn btn-secondary">次要按鈕</button>
-                <button type="button" class="btn btn-normal">一般按鈕</button> -->
-            </div>
-        </div>
-    </div>
+<body class="Login">
     <!-- 直接跳主內容區 -->
     <a class="goCenter" href="#center" tabindex="1">按Enter到主內容區</a>
     <!-- wrapper Start -->
@@ -60,7 +27,7 @@
         <!-- header Start -->
         <header class="header">
             <div class="container">
-                <a class="accesskey" href="#aU" id="aU" accesskey="U" title="網站標題" tabindex="2">:::</a>
+                <a class="accesskey" href="#aU" id="aU" accesskey="U" title="外交部領事事務局護照預約申請" tabindex="2">:::</a>
                 <!-- navigation Start -->
                 <nav class="navigation" role="navigation" aria-label="Site">
                     <!-- 新增div navlist -->
@@ -73,62 +40,32 @@
                 </nav>
                 <!-- navigation End -->
                 <h1>
-                    <a href="index.htm"><img src="images/logo.png" alt="外交部領事事務局護照預約申請" /><span>旅行社團件<b>申辦護照系統</b></span></a>
+                    <a href="index.htm"><img src="images/logo.png" alt="外交部領事事務局護照預約申請" /></a>
                 </h1>
                 <!-- noscript -->
                 <noscript> 您的瀏覽器不支援JavaScript語法，JavaScript語法並不影響內容的陳述。您可使用按鍵盤上的Ctrl鍵+ (+)鍵放大/(-)鍵縮小來改變字型大小；回到上一頁可使用瀏覽器提供的 Alt+左方向鍵(←) 快速鍵功能；列印可使用瀏覽器提供的(Ctrl+P)功能。您的瀏覽器，不支援script語法，若您的瀏覽器無法支援請點選此超連結 <a href="#">網站導覽</a>
                 </noscript>
-                <!-- menu Start -->
-                <nav class="menu" role="navigation" aria-label="About page">
-                    <ul>
-                        <li><a href="#">簡表資料填寫</a></li>
-                        <li><a href="#">簡表批次匯入</a></li>
-                        <li><a href="#">護照暫存清單</a></li>
-                        <li><a href="#">護照送件清單</a></li>
-                    </ul>
-                </nav>
-                <!-- menu End -->
-                <!-- user -->
-                <section class="user_login">
-                    <span>XXX</span>，您好！登入時間：<span>2021/10/10</span>
-                    <button type="button" class="btn btn-primary btn-logout">登出</button>
-                </section>
             </div>
         </header>
         <!-- header End -->
         <!-- main Start -->
-        <div id="center" class="main innerpage">
-            <!-- 內頁新增一個classname-->
-            <div class="container">
-                <!-- 主要內容區 -->
-                <div class="center_block">
-                    <a class="accesskey" href="#aC" id="aC" accesskey="C" title="主要內容區">:::</a>
-                    <!-- breadcrumb路徑 -->
-                    <div class="breadcrumb">
-                        <ul>
-                            <li><a href="#">首頁</a></li>
-                            <li><a href="#">節點</a></li>
-                            <li>節點</li>
-                        </ul>
-                    </div>
-                    <div class="white_zone">
-                        <h2 class="title">照片上傳</h2>
-                        <!-- <h3 class="subtitle"><span>請再次確認輸入資料</span></h3> -->
-                        <!-- Start -->
-                        <section class="">
-                            <!-- loading -->
-                            <div class="loading">
-                                <div></div>
-                                <svg class="spinner" width="65px" height="65px" viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg">
-                                   <circle class="path" fill="none" stroke-width="6" stroke-linecap="round" cx="33" cy="33" r="30"></circle>
-                                </svg>
-                                <p>照片檢核中...</p>
-                            </div>
-                        </section>
-                        <!-- End -->
+        <div id="center" class="main">
+            <a class="accesskey" href="#aC" id="aC" accesskey="C" title="主要內容區">:::</a>
+            <!-- 任何一個section下一層都要包下一層都要包div container作對齊 -->
+            <section class="control_panle">
+                <div class="container">
+                    <div class="col">
+                        <div class="login_title">
+                            <h2 class="main-title">個人申請護照網路填表及預約申辦系統</h2>
+                            <p>歡迎使用外交部領事事務局個人申請護照網路填表及預約申辦系統，本服務提供民眾可事先於網路填寫簡式護照資料表及上傳數位照片，並預約送件地點及時間。</p>
+                        </div>
+                        <!-- 憑證PIN碼 -->
+                        <div class="pin_panel">
+                            <button type="button" class="btn btn-submit">我要申辦護照</button>
+                        </div>
                     </div>
                 </div>
-            </div>
+            </section>
         </div>
         <!-- footer Start-->
         <footer>
@@ -169,10 +106,10 @@
     <script src="vendor/lazyload/lazyload.js"></script><!-- lazyload -->
     <script src="vendor/picturefill/picturefill.min.js" async></script><!-- picturefill -->
     <script src="vendor/scrolltable/jquery.scroltable.min.js"></script><!-- scrolltable -->
-    <!-- 燈箱facybox -->
-    <script src="vendor/facybox/dist/jquery.fancybox.min.js"></script>
     <!-- hyUI -->
     <script src="js/hyui.js"></script>
     <!-- 客製js -->
     <script src="js/customize.js"></script>
 </body>
+
+</html>
