--- a/p_sp3.html
+++ b/p_sp3.html
@@ -16,7 +16,7 @@
     <!-- 燈箱facybox -->
     <link rel="stylesheet" type="text/css" href="vendor/facybox/dist/jquery.fancybox.min.css">
     <!-- CSS -->
-    <link rel="stylesheet" href="css/boca.css">
+    <link rel="stylesheet" href="css/boca_personal.css">
     <!-- favicon -->
     <link href="images/favicon.png" rel="icon" type="image/x-icon">
 </head>
@@ -79,20 +79,20 @@
                 <noscript> 您的瀏覽器不支援JavaScript語法，JavaScript語法並不影響內容的陳述。您可使用按鍵盤上的Ctrl鍵+ (+)鍵放大/(-)鍵縮小來改變字型大小；回到上一頁可使用瀏覽器提供的 Alt+左方向鍵(←) 快速鍵功能；列印可使用瀏覽器提供的(Ctrl+P)功能。您的瀏覽器，不支援script語法，若您的瀏覽器無法支援請點選此超連結 <a href="#">網站導覽</a>
                 </noscript>
                 <!-- menu Start -->
-                <nav class="menu" role="navigation" aria-label="About page">
+                <!-- <nav class="menu" role="navigation" aria-label="About page">
                     <ul>
                         <li><a href="#">簡表資料填寫</a></li>
                         <li><a href="#">簡表批次匯入</a></li>
                         <li><a href="#">護照暫存清單</a></li>
                         <li><a href="#">護照送件清單</a></li>
                     </ul>
-                </nav>
+                </nav> -->
                 <!-- menu End -->
                 <!-- user -->
-                <section class="user_login">
+                <!-- <section class="user_login">
                     <span>XXX</span>，您好！登入時間：<span>2021/10/10</span>
                     <button type="button" class="btn btn-primary btn-logout">登出</button>
-                </section>
+                </section> -->
             </div>
         </header>
         <!-- header End -->
@@ -112,18 +112,76 @@
                         </ul>
                     </div>
                     <div class="white_zone">
-                        <h2 class="title">照片上傳</h2>
-                        <!-- <h3 class="subtitle"><span>請再次確認輸入資料</span></h3> -->
+                        <h2 class="title">變更辦理方式</h2>
                         <!-- Start -->
                         <section class="">
-                            <!-- loading -->
-                            <div class="loading">
-                                <div></div>
-                                <svg class="spinner" width="65px" height="65px" viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg">
-                                   <circle class="path" fill="none" stroke-width="6" stroke-linecap="round" cx="33" cy="33" r="30"></circle>
-                                </svg>
-                                <p>照片檢核中...</p>
+                            <div>
+                                <h3 class="table_title">以下為您的預約資料：</h3>
+                                <table class="table_box">
+                                    <tr>
+                                        <th>報到時段</th>
+                                        <td>2021年10月26日(星期二) 12:00-12:30</td>
+                                    </tr>
+                                    <tr>
+                                        <th>送件地點</th>
+                                        <td>外交部領事事務局（100219臺北市中正區濟南路一段2之2號1樓）<br>＊網路預約申辦護照者，請先至1樓大廳後方之第①號公共事務機（KIOSK）報到、取號後，再搭乘電扶梯至3樓大廳送件。</td>
+                                    </tr>
+                                    <tr>
+                                        <th>護照申請人</th>
+                                        <td>王O明</td>
+                                    </tr>
+                                    <tr>
+                                        <th>辦理方式</th>
+                                        <td>親自辦理</td>
+                                    </tr>
+                                    <tr>
+                                        <th>寄送護照申請書</th>
+                                        <td><button type="button" class="btn btn-primary">Email 我的護照申請書</button></td>
+                                    </tr>
+                                </table>
+                                <form action="">
+                                    <div class="flex-form form-column">
+                                        <div class="form_grp">
+                                            <div class="flex-col-equal-1">
+                                                <label for="" class="form_title" aria-required="true"><abbr class="necessary" title="為必填(選)欄位,不能為空白。">必填</abbr>變更辦理方式</label>
+                                                <div class="form_content">
+                                                    <div class="btn_grp equal-2">
+                                                        <input type="button" class="btn btn-check" value="親自辦理">
+                                                        <input type="button" class="btn btn-check checked" value="委任代辦">
+                                                    </div>
+                                                    <div class="notice_info">備註文字</div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="form_grp">
+                                            <div class="flex-col-equal-1">
+                                                <label for="" class="form_title" aria-required="true"><abbr class="necessary" title="為必填(選)欄位,不能為空白。">必填</abbr>陪同人員</label>
+                                                <div class="form_content">
+                                                    <div class="btn_grp equal-2">
+                                                        <input type="button" class="btn btn-check" value="親由法定代理人陪同">
+                                                        <input type="button" class="btn btn-check" value="由法定代理人委任三親等之內家屬陪同">
+                                                    </div>
+                                                    <div class="notice_info">備註文字</div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="form_grp" role="group" aria-labelledby="fake-legend">
+                                            <label class="form_title"><abbr class="necessary" title="為必填(選)欄位,不能為空白。">必填</abbr>需先辦理人別確認</label>
+                                            <div class="form_content" id="fake-legend">
+                                                <div class="check_grp">
+                                                    <label><input type="checkbox" name="" value="" checked="">我知道了（首次申辦護照採委任辦理，需先向全國任一戶政事務所辦理人別確認）</label>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <!-- 按鈕 -->
+                                        <div class="btn_grp form_inline">
+                                            <button class="btn btn-reset">取消</button>
+                                            <button class="btn btn-submit">確認</button>
+                                        </div>
+                                    </div>
+                                </form>
                             </div>
+                            
                         </section>
                         <!-- End -->
                     </div>
