--- a/index.htm
+++ b/index.htm
@@ -231,135 +231,34 @@
                     </tr> -->
                 </tbody>
             </table>
-            <!-- <table>
-                <thead>
-                    <tr>
-                        <th class="num">編號</th>
-                        <th>頁面名稱</th>
-                        <th>檔案名稱</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td></td>
-                        <td>首頁</td>
-                        <td><a href="mp_template.htm"></a></td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td>flex grid</td>
-                        <td><a href="flex_template.htm"></a></td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td>列表頁</td>
-                        <td><a href="lp_template.htm"></a></td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td>列表頁-表格</td>
-                        <td><a href="lp_table_template.htm"></a></td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td>列表頁-相簿</td>
-                        <td><a href="lp_album_template.htm"></a></td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td>內容頁</td>
-                        <td><a href="cp_template.htm"></a></td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td>內容頁-照片</td>
-                        <td><a href="cp_photo_template.htm"></a></td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td>節點頁</td>
-                        <td><a href="np_template.htm"></a></td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td>轉寄友人</td>
-                        <td><a href="fp_template.htm"></a></td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td>意見信箱</td>
-                        <td><a href="qp_template.htm"></a></td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td>表單</td>
-                        <td><a href="form.htm"></a></td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td>表單 beta版</td>
-                        <td><a href="form-beta.htm"></a></td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td>按鈕樣式</td>
-                        <td><a href="btn.htm"></a></td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td>網站地圖</td>
-                        <td><a href="sitemap_template.htm"></a></td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td>Google Search頁面</td>
-                        <td><a href="gs_template.htm"></a></td>
-                    </tr>
-                     <tr>
-                        <td></td>
-                        <td>圖片輪播</td>
-                        <td><a href="slider.htm"></a></td>
-                    </tr>
-                     <tr>
-                        <td></td>
-                        <td>tab 改button</td>
-                        <td><a href="tab.htm"></a></td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td>404 網站錯誤</td>
-                        <td><a href="404.htm"></a></td>
-                    </tr>
-                </tbody>
-            </table> -->
-            <!-- 專案客製化頁面 -->
-            <!-- <table>
-                <thead>
-                    <tr>
-                        <th class="num">編號</th>
-                        <th>頁面名稱</th>
-                        <th>檔案名稱</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td></td>
-                        <td>電子報</td>
-                        <td><a href="epaper_template.htm"></a></td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td>...</td>
-                        <td><a href="..."></a></td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td>...</td>
-                        <td><a href="..."></a></td>
-                    </tr>
 
+            <h3>A4 PDF</h3>
+            <table>
+                <thead>
+                    <tr>
+                        <th class="num">編號</th>
+                        <th>頁面名稱</th>
+                        <th>檔案名稱</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td></td>
+                        <td>戶所</td>
+                        <td><a href="pdf_1.html" target="_blank"></a></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>簡式護照資料表</td>
+                        <td><a href="pdf_2.html" target="_blank"></a></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>旅行社送件單</td>
+                        <td><a href="pdf_3.html" target="_blank"></a></td>
+                    </tr>
                 </tbody>
-            </table> -->
+            </table>
         </div>
     </div>
     <a href="javascript:;" class="scrollToTop" >回頁首</a>
