2021-1122 新增照片調整：foto-adjust.htm

--- a/index.htm
+++ b/index.htm
@@ -145,7 +145,7 @@
                     <tr>
                         <td></td>
                         <td>照片上傳、人像縮放</td>
-                        <td><a href="..."></a></td>
+                        <td><a href="foto-adjust.htm" target="_blank"></a></td>
                     </tr>
                     <tr>
                         <td></td>
@@ -202,7 +202,7 @@
                     <tr>
                         <td></td>
                         <td>照片上傳、人像縮放</td>
-                        <td><a href="..."></a></td>
+                        <td>內容同 foto-adjust.htm</td>
                     </tr>
                     <tr>
                         <td></td>
